--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,6 @@
 body {
-    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+    background: linear-gradient(135deg, #ff758c, #ff7eb3);
+    font-family: 'Playfair Display', serif;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -7,6 +8,14 @@ body {
     text-align: center;
     font-family: 'Poppins', sans-serif;
     padding: 20px; /* Prevent content from touching edges */
+}
+
+h3{
+    font-family: 'Dancing Script', cursive !important; 
+    font-size: 28px;
+    font-weight: bolder;
+    color: #d63384;
+    text-shadow: 2px 2px 10px rgba(255, 105, 180, 0.5);
 }
 
 /* Smooth fade-out effect */
@@ -65,6 +74,9 @@ body {
 }
 
 /* Buttons */
+button{
+    font-family: 'poppin', cursive !important; 
+}
 .btn-love {
     margin: 5px;
     padding: 10px 25px;
